@@ -1888,9 +1888,13 @@ int slurm_receive_msg(slurm_fd fd, slurm_msg_t *msg, int timeout)
 	}
 	
 	if (check_header_version(&header) < 0) {
+		slurm_addr resp_addr;
+		char addr_str[32];
 		int uid = _unpack_msg_uid(buffer);
-		error("Invalid Protocol Version %u from uid=%d", 
-			header.version, uid);
+		slurm_get_peer_addr(fd, &resp_addr);
+		slurm_print_slurm_addr(&resp_addr, addr_str, sizeof(addr_str));
+		error("Invalid Protocol Version %u from uid=%d at %s", 
+			header.version, uid, addr_str);
 		free_buf(buffer);
 		rc = SLURM_PROTOCOL_VERSION_ERROR;
 		goto total_return;
@@ -2050,9 +2054,13 @@ List slurm_receive_msgs(slurm_fd fd, int steps, int timeout)
 	}
 	
 	if(check_header_version(&header) < 0) {
+		slurm_addr resp_addr;
+		char addr_str[32];
 		int uid = _unpack_msg_uid(buffer);
-		error("Invalid Protocol Version %u from uid=%d",
-			header.version, uid);
+		slurm_get_peer_addr(fd, &resp_addr);
+		slurm_print_slurm_addr(&resp_addr, addr_str, sizeof(addr_str));
+		error("Invalid Protocol Version %u from uid=%d at %s", 
+			header.version, uid, addr_str);
 		free_buf(buffer);
 		rc = SLURM_PROTOCOL_VERSION_ERROR;
 		goto total_return;
@@ -2233,9 +2241,13 @@ int slurm_receive_msg_and_forward(slurm_fd fd, slurm_addr *orig_addr,
 	}
 	
 	if (check_header_version(&header) < 0) {
+		slurm_addr resp_addr;
+		char addr_str[32];
 		int uid = _unpack_msg_uid(buffer);
-		error("Invalid Protocol Version %u from uid=%d", 
-			header.version, uid);
+		slurm_get_peer_addr(fd, &resp_addr);
+		slurm_print_slurm_addr(&resp_addr, addr_str, sizeof(addr_str));
+		error("Invalid Protocol Version %u from uid=%d at %s", 
+			header.version, uid, addr_str);
 		free_buf(buffer);
 		rc = SLURM_PROTOCOL_VERSION_ERROR;
 		goto total_return;
